# reqrio

./: .gitignore  Cargo.toml  README.md  build.rs
c++/: CMakeLists.txt  Reqrio.cpp  Reqrio.h  Response.cpp  Response.h  bindings.h  reqrio_rs.lib  test.cpp
examples/: async_h1.rs  sync_h1.rs
java/: pom.xml
java/src/main/java/org/example/: ALPN.java  Cookie.java  Header.java  Headers.java  Library.java  Method.java  Reqrio.java  Response.java  Timeout.java
java/src/main/java/org/xllgl2017/: ALPN.java  Cookie.java  Header.java  Headers.java  Library.java  Main.java  Method.java  Reqrio.java  Response.java  Timeout.java
java/src/test/java/: Main.java
py/: MANIFEST.in  pyproject.toml  setup.py
py/reqrio/: __init__.py  alpn.py  bindings.py  header.py  method.py  response.py  session.py  stream.py  util.py
py/reqrio/hooks/: hook-reqrio.py
py/tests/: test_session.py
reqrio/: Cargo.toml  README.md  build.rs
reqrio/examples/: async_h1.rs  sync_h1.rs
reqrio/src/: acq.rs  alpn.rs  body.rs  buffer.rs  error.rs  export.rs  ext.rs  file.rs  lib.rs  scq.rs  timeout.rs
reqrio/src/coder/: mod.rs
reqrio/src/coder/hpack/: decode.rs  encode.rs  mod.rs  table.rs
reqrio/src/packet/h2c/frame/: flag.rs  mod.rs  setting.rs
reqrio/src/packet/http/: cookie.rs  mod.rs  response.rs
reqrio/src/packet/http/content_type/: image.rs  mod.rs  text.rs
reqrio/src/packet/http/header/: key.rs  method.rs  mod.rs  status.rs
reqrio/src/stream/: astream.rs  async_stream.rs  cstream.rs  kind.rs  mod.rs  proxy.rs  sync_stream.rs
reqrio/src/url/: addr.rs  mod.rs  param.rs  protocol.rs  uri.rs
reqtls/: Cargo.toml
reqtls/src/: bytes.rs  connection.rs  error.rs  fingerprint.rs  lib.rs  prf.rs  rand.rs  record.rs
reqtls/src/cipher/: iv.rs  key.rs  mod.rs  suite.rs
reqtls/src/extend/: algorithm.rs  alps.rs  certificate.rs  client_hello.rs  formats.rs  group.rs  mod.rs  psk_key.rs  server_name.rs  status.rs  version.rs
reqtls/src/message/: certificate.rs  client_hello.rs  key_exchange.rs  mod.rs  server_hello.rs  session_ticket.rs
reqtls/src/secret/: key.rs
src/: acq.rs  alpn.rs  error.rs  export.rs  ext.rs  lib.rs  scq.rs
src/coder/hpack/: mod.rs  table.rs
src/packet/: mod.rs
src/packet/h2c/: mod.rs
src/packet/h2c/frame/: typo.rs
src/packet/http/: cookie.rs  mod.rs  response.rs
src/packet/http/content_type/: application.rs  font.rs  video.rs
src/packet/http/header/: key.rs  method.rs  mod.rs  value.rs
src/stream/: astream.rs  kind.rs  mod.rs  proxy.rs
src/tls/: async_stream.rs  bytes.rs  connection.rs  fingerprint.rs  mod.rs  prf.rs  record.rs  sync_stream.rs  version.rs
src/tls/cipher/: iv.rs  key.rs  mod.rs  suite.rs
src/tls/extend/: algorithm.rs  alps.rs  certificate.rs  client_hello.rs  formats.rs  group.rs  key_share.rs  mod.rs  psk_key.rs  server_name.rs  status.rs  version.rs
src/tls/message/: certificate.rs  client_hello.rs  key_exchange.rs  mod.rs  server_hello.rs  session_ticket.rs
src/tls/secret/: key.rs
src/url/: addr.rs  mod.rs  param.rs  protocol.rs  uri.rs
