[package]
name = "hls"
version = "0.1.0"
edition = "2024"

[dependencies]
json = { git = "https://github.com/lgl2017/json" }
brotli = "8.0.2"
flate2 = "1.1.5"
zstd = "0.13.3"
httlib-huffman = "0.3.4"
urlencoding = "2.1.3"
tokio = { version = "1.48.0", features = ["time", "net", "io-util", "macros", 'rt-multi-thread'], optional = true }
rustls = { version = "0.23.35", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "1.0.4", optional = true }
hex = { version = "0.4.3", optional = true }
aws-lc-rs = { version = "1.15.2", optional = true }
md5 = { version = "0.8.0", optional = true }
rand = { version = "0.10.0-rc.5", optional = true }
hmac = { version = "0.13.0-rc.3", optional = true }
sha2 = { version = "0.11.0-rc.3", optional = true }
p256 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdh"], optional = true }
x25519-dalek = { version = "3.0.0-pre.3", optional = true }

[features]
# 自定义tls，支持自定义指纹
cls = ["cls_sync", "cls_async"]
cls_sync = ["hex", "aws-lc-rs", "md5", "rand", "hmac", "sha2", "p256", "x25519-dalek"]
cls_async = ["hex", "aws-lc-rs", "md5", "rand", "hmac", "sha2", "p256", "x25519-dalek", "tokio"]
std = ["std_sync", "std_async"]
std_sync = ["rustls", "webpki-roots"]
std_async = ["tokio", "tokio-rustls", "rustls", 'webpki-roots']

[build-dependencies]
cfg_aliases = "0.2.1"

[profile.release]
strip = "all"