[package]
name = "reqrio"
version = "0.0.9"
edition = "2024"
readme = "README.md"
description = "A http lib"
license-file = "../LICENSE-APACHE"
repository = "https://github.com/xllgl2017/reqrio/tree/master/reqrio"

[lib]
name = "reqrio"
crate-type = ['rlib', 'cdylib']

[dependencies]
json = { package = "reqrio-json", version = "0.1.3" }
brotli = "8.0.2"
flate2 = "1.1.5"
zstd = "0.13.3"
httlib-hpack = "0.1.3"
#httlib-huffman = "0.3.4"
urlencoding = "2.1.3"
hex = { version = "0.4.3", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.48.0", features = ["time", "net", "io-util", "macros", 'rt-multi-thread'], optional = true }
rustls = { version = "0.23.35", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "1.0.4", optional = true }
reqtls = { workspace = true, optional = true }

[features]
# 自定义tls，支持自定义指纹
cls_sync = ["reqtls"]
cls_async = ["tokio", "reqtls"]
std_sync = ["rustls", "webpki-roots"]
std_async = ["tokio", "tokio-rustls", "rustls", 'webpki-roots']
export = ["std_sync", "hex"]

[build-dependencies]
cfg_aliases = "0.2.1"

